--- a/app/templates/main/prototype/offices.html
+++ b/app/templates/main/prototype/offices.html
@@ -1,5 +1,5 @@
-{% extends 'prototype/base.html' %}
-{% include 'prototype/header.html' %}
+{% extends 'base.html' %}
+{% include 'header.html' %}
 
 
 {% block title %} Offices {% endblock %}
