roles updated and office model name removed

--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -178,7 +178,7 @@
               {{ form.submit(class="btn btn-outline-info") }}
           </div>
       </form>
-      <small>If you already have an account, click  <a href="{{ url_for('login') }}" style="color:dodgerblue">here</a>.</small>
+      <small>If you already have an account, click  <a href="{{ url_for('auth.login') }}" style="color:dodgerblue">here</a>.</small>
     </div>
 
           
