--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -64,20 +64,6 @@
           <fieldset class="form-group">
               <legend class="border-bottom mb-4">Join Today</legend>
               <div class="form-group">
-                  {{ form.username.label(class="form-control-label") }}
-
-                  {% if form.username.errors %}
-                      {{ form.username(class="form-control form-control-lg is-invalid") }}
-                      <div class="invalid-feedback">
-                          {% for error in form.username.errors %}
-                              <span>{{ error }}</span>
-                          {% endfor %}
-                      </div>
-                  {% else %}
-                      {{ form.username(class="form-control form-control-lg") }}
-                  {% endif %}
-              </div>
-              <div class="form-group">
                   {{ form.email.label(class="form-control-label") }}
                   {% if form.email.errors %}
                       {{ form.email(class="form-control form-control-lg is-invalid") }}
@@ -91,31 +77,31 @@
                   {% endif %}
               </div>
               <div class="form-group">
-                {{ form.firstname.label(class="form-control-label") }}
+                {{ form.first_name.label(class="form-control-label") }}
 
-                {% if form.firstname.errors %}
-                    {{ form.firstname(class="form-control form-control-lg is-invalid") }}
+                {% if form.first_name.errors %}
+                    {{ form.first_name(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.firstname.errors %}
+                        {% for error in form.first_name.errors %}
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.firstname(class="form-control form-control-lg") }}
+                    {{ form.first_name(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
             <div class="form-group">
-                {{ form.lastname.label(class="form-control-label") }}
+                {{ form.last_name.label(class="form-control-label") }}
 
-                {% if form.lastname.errors %}
-                    {{ form.lastname(class="form-control form-control-lg is-invalid") }}
+                {% if form.last_name.errors %}
+                    {{ form.last_name(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.lastname.errors %}
+                        {% for error in form.last_name.errors %}
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.lastname(class="form-control form-control-lg") }}
+                    {{ form.last_name(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
             <div class="form-group">
@@ -133,17 +119,17 @@
                 {% endif %}
             </div>
             <div class="form-group">
-                {{ form.phone.label(class="form-control-label") }}
+                {{ form.phone_number.label(class="form-control-label") }}
 
-                {% if form.phone.errors %}
-                    {{ form.phone(class="form-control form-control-lg is-invalid") }}
+                {% if form.phone_number.errors %}
+                    {{ form.phone_number(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.phone.errors %}
+                        {% for error in form.phone_number.errors %}
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.phone(class="form-control form-control-lg") }}
+                    {{ form.phone_number(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
               <div class="form-group">
