--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -41,8 +41,9 @@
         <section class="profile">
 
             <div class="profile__menu">
-                <a href="#">My packages</a>
-                <a href="#">My addresses</a>
+                <a href="#">Packages</a>
+                <a href="#">Employees</a>
+                <a href="#">Offices</a>
                 <a href="#">Tracking</a>
                 <a href="#">Settings</a>
             </div>
@@ -56,6 +57,7 @@
                         <th>Weight</th>
                         <th>Price</th>
                         <th>Status</th>
+                        <th>Add&Remove Packages</th>
                     </tr>
                     <tr>
                         <td>1</td>
@@ -64,6 +66,12 @@
                         <td>3kg.</td>
                         <td>5lv.</td>
                         <td>arrived</td>
+                        <td>
+                            
+                            <a href="#" class ="addButton">Add Package</a>
+                            <a href="#" class ="removeButton">Remove Package</a>
+
+                        </td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -72,6 +80,12 @@
                         <td>10kg.</td>
                         <td>15lv.</td>
                         <td>not arrived</td>
+                        <td>
+                            
+                            <a href="#" class ="addButton">Add Package</a>
+                            <a href="#" class ="removeButton">Remove Package</a>
+
+                        </td>
                     </tr>
                     <tr>
                         <td>3</td>
@@ -80,6 +94,12 @@
                         <td>10kg.</td>
                         <td>15lv.</td>
                         <td>not arrived</td>
+                        <td>
+                            
+                            <a href="#" class ="addButton">Add Package</a>
+                            <a href="#" class ="removeButton">Remove Package</a>
+
+                        </td>
                     </tr>
                     <tr>
                         <td>4</td>
@@ -88,12 +108,19 @@
                         <td>10kg.</td>
                         <td>15lv.</td>
                         <td>not arrived</td>
+                        <td>
+                            
+                            <a href="#" class ="addButton">Add Package</a>
+                            <a href="#" class ="removeButton">Remove Package</a>
+
+                        </td>
                     </tr>
+
+                  
                 </table>
             
 
         </section>
-
 
 
         <footer class="footer">
