--- a/app/templates/scssAndJs/scss/_variables.scss
+++ b/app/templates/scssAndJs/scss/_variables.scss
@@ -5,6 +5,8 @@ $brightCyan: hsl(192, 70%, 51%);
 $grayishBlue:hsl(233, 8%, 62%);
 $bannanaYellow: hsl(49, 99%, 61%);
 $veryLightGrey: hsl(0, 0%,95.69%);
+$crimsonRed:hsl(348, 83.3%,47.1%);
+$orangeRed: hsl(16, 100.0%,50.0%);
 $white: hsl(0, 0%, 100%);
 //Font sizes
 $font-sm: 0.875rem; //14px
