--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -39,17 +39,28 @@
         </header>
 
 
-        <section class ="loginS" >
+        <section class ="login" >
 
-            <div class = "login">
+            <div class ="login__menu">
                 <h1>Log In</h1>
 
                 <form action="">
-                    Username:
-                        <input type="text", placeholder="Enter Username">
-
-                    Password:
-                        <input type="password", placeholder="Enter Password">
+                    <div>
+                        <label for="">Username:</label>
+                    
+                        <input type="text" placeholder="Enter Username">
+                    </div>
+                   
+                    <div>
+                        <label for="">Password:</label>
+                
+                        <input type="password" placeholder="Enter Password">
+                    </div>
+                   
+                        <input type="submit" value="Login">
+                        <div class="signup_link">
+                            No account yet? <a href="#">SignUp</a>
+                        </div>
                 </form>
             </div>
         </section>
