--- a/app/templates/main/profile.html
+++ b/app/templates/main/profile.html
@@ -40,8 +40,9 @@
         <section class="profile">
 
             <div class="profile__menu">
-                <a href="#">My packages</a>
-                <a href="#">My addresses</a>
+                <a href="#">Packages</a>
+                <a href="#">Employees</a>
+                <a href="#">Offices</a>
                 <a href="#">Tracking</a>
                 <a href="#">Settings</a>
             </div>
@@ -55,6 +56,8 @@
                         <th>Weight</th>
                         <th>Price</th>
                         <th>Status</th>
+                        <th></th>
+                        <th></th>
                     </tr>
                     <tr>
                         <td>1</td>
@@ -63,6 +66,12 @@
                         <td>3kg.</td>
                         <td>5lv.</td>
                         <td>arrived</td>
+                        <td>
+                            <a href="#" class ="addButton">Add Package</a>
+                        </td>
+                        <td>
+                            <a href="#" class ="removeButton">Remove Package</a>
+                        </td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -71,6 +80,12 @@
                         <td>10kg.</td>
                         <td>15lv.</td>
                         <td>not arrived</td>
+                        <td>
+                            <a href="#" class ="addButton">Add Package</a>
+                        </td>
+                        <td>
+                            <a href="#" class ="removeButton">Remove Package</a>
+                        </td>
                     </tr>
                     <tr>
                         <td>3</td>
@@ -79,6 +94,12 @@
                         <td>10kg.</td>
                         <td>15lv.</td>
                         <td>not arrived</td>
+                        <td>
+                            <a href="#" class ="addButton">Add Package</a>
+                        </td>
+                        <td>
+                            <a href="#" class ="removeButton">Remove Package</a>
+                        </td>
                     </tr>
                     <tr>
                         <td>4</td>
@@ -87,12 +108,17 @@
                         <td>10kg.</td>
                         <td>15lv.</td>
                         <td>not arrived</td>
+                        <td>
+                            <a href="#" class ="addButton">Add Package</a>
+                        </td>
+                        <td>
+                            <a href="#" class ="removeButton">Remove Package</a>
+                        </td>
                     </tr>
                 </table>
             
 
         </section>
-
 
 
         <footer class="footer">
