shipment templates added

--- a/app/templates/employee/all.html
+++ b/app/templates/employee/all.html
@@ -3,10 +3,14 @@
 {% block title %}- Employees{% endblock %}
 
 {% block content %}
+
+    <div style="margin-left: 43.5%">
+        <a href="#" class="btn btn-primary">Add Employee</a>
+    </div>
     <section class="profile">
         {% include 'sidebar.html' %}
 
-        <table class="profile__table">
+        <table class="profile__table" style="margin-top: 3%; margin-bottom: 3%; margin-left: 1%;">
             <tr class = "tbhead">
                 <th>No.</th>
                 <th>Email</th>
