--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
 
 
-    <h1 class = "footer__logo">CSCB532</h1>
+    <h1 class = "footer__logo">Logistic Company</h1>
 
 
     <div class="footer__social">
@@ -28,7 +28,7 @@
     </div>
 
     <div class="footer__copyright">
-        &copy; CSCB532.All Rigths Reserved.
+        &copy; Logistic Company.All Rigths Reserved.
     </div>
 
 
