--- a/app/templates/office/all.html
+++ b/app/templates/office/all.html
@@ -1,12 +1,16 @@
 {% extends 'layout.html' %}
 
 {% block title %}- Offices{% endblock %}
+{% block table_name %}Offices{% endblock %}
 
 {% block content %}
+    <div style="margin-left: 43.5%">
+        <a href="#" class="btn btn-primary">Add Office</a>
+    </div>
     <section class="profile">
         {% include 'sidebar.html' %}
 
-        <table class="profile__table">
+        <table class="profile__table" style="margin-top: 3%; margin-bottom: 3%; margin-left: 1%;">
             <tr class = "tbhead">
                 <th>No.</th>
                 <th>Address</th>
