--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -8,7 +8,7 @@
 
 <div class="justify-content-center" style="margin-left: 25%; margin-bottom: 10%;">
     <div class="col-8">
-        <form method="POST", action="{{ url_for('auth.login') }}">
+        <form method="POST", action="{{ url_for('auth.register') }}">
             {{ form.hidden_tag() }}
             <div class="form-group">
                 {{ form.email.label(class="form-control-label") }}
