--- a/app/templates/employee/all.html
+++ b/app/templates/employee/all.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     <div style="margin-left: 43.5%">
-        <a href="#" class="btn btn-primary">Add Employee</a>
+        <a href="{{ url_for('employee.create') }}" class="btn btn-primary">Add Employee</a>
     </div>
     <section class="profile">
         {% include 'sidebar.html' %}
