--- a/app/templates/shipment/all.html
+++ b/app/templates/shipment/all.html
@@ -3,9 +3,11 @@
 {% block title %}- Shipments{% endblock %}
 
 {% block content %}
+    {% if current_user.has_role(Role.EMPLOYEE) %}
     <div style="margin-left: 43.5%;">
-        <a href="#" class="btn btn-primary">Add shipment</a>
+        <a href="{{ url_for('shipment.create') }}" class="btn btn-primary">Add shipment</a>
     </div>
+    {% endif %}
     <section class="profile">
         {% include 'sidebar.html' %}
         <table class="profile__table" style="margin-top: 3%; margin-bottom: 3%; margin-left: 1%;">
