Done the Login$SignUP

--- a/app/templates/scssAndJs/scss/_footer.scss
+++ b/app/templates/scssAndJs/scss/_footer.scss
@@ -3,6 +3,9 @@
     color: $white;
     padding: 2.5rem;
     text-align: center;
+     position: fixed;
+     bottom: 0;
+     width: 100%;
 
     a{
         color: $white;
