--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -39,10 +39,10 @@
         </header>
 
 
-        <section class ="login" >
+        <section class ="signup" >
 
-            <div class = "login__center">
-                <h1>Log In</h1>
+            <div class = "signup__center">
+                <h1>Sign Up</h1>
 
                     <form action="">
                         <div class="text">
@@ -56,11 +56,15 @@
                     
                             <input type="password" placeholder="Enter Password">
                         </div>
+
+                        <div class= "text">
+                            <label for="">Confirm Password:</label>
                     
-                            <input type="submit" value="Login">
-                            <div class="signup_link">
-                                No account yet? <a href="signup.html">SignUp</a>
-                            </div>
+                            <input type="password" placeholder="Confirm Password">
+                        </div>
+                    
+                            <input type="submit" value="SignUp">
+                            
                     </form>
             </div>
         </section>
