--- a/app/templates/scssAndJs/scss/_signup.scss
+++ b/app/templates/scssAndJs/scss/_signup.scss
@@ -1,9 +1,7 @@
-.login{
-    
+.signup{
     background: $veryLightGrey;
     height: 100vh;
     overflow: hidden;
-    
 
     &__center{
         position: absolute;
@@ -19,7 +17,6 @@
             padding: 0 0 20px 0;
             border-bottom: 1px solid $darkBlue;
         }
-        
         form{
             padding: 0 40px;
             box-sizing: border-box;
@@ -37,17 +34,6 @@
                 }
                 
             }
-            .signup_link{
-                margin: 30px 0;
-                text-align: center;
-                font-size: 16px;
-                a{
-                    color: $brightCyan;
-                }
-                a:hover{
-                    text-decoration: underline;
-                }
-            }
         }
         input[type="submit"]{
             width: 100%;
@@ -59,13 +45,11 @@
             color: $white;
             font-weight: 700;
             cursor: pointer;
+            margin-bottom: 30px;
         }
         input[type="submit"]:hover{
             background: linear-gradient(to left, $limeGreen, $brightCyan);
             
         }
     }
-
-    
-
 }
